fix horizontal scroll width

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 *::-webkit-scrollbar {
 	width: 8px;
+	height: 8px;
 	background-color: #fafafa;
 }
 
